1 August 2024: Wouter
	- Fix dnstap test program, cleans up to have clean memory on exit,
	  for tap_data_free, does not delete NULL items. Also it does not try
	  to free the tail, specifically in the free of the list since that
	  picked up the next item in the list for its loop causing invalid
	  free. Added internal unit test to unbound-dnstap-socket for that.
	- Fix that the worker mem report with alloc stats does not attempt
	  to print memory use of forwards and hints if they have been
	  deleted already.

31 July 2024: Wouter
	- Fix for #1114: Fix that cache fill for forward-host names is
	  performed, so that with nonzero target-fetch-policy it fetches
	  forwarder addresses and uses them from cache. Also updated that
	  delegation point cache fill routines use CDflag for AAAA message
	  lookups, so that its negative lookup stops a recursion since the
	  cache uses the bit for disambiguation for dns64 but the recursion
	  uses CDflag for the AAAA target lookups, so the check correctly
	  stops a useless recursion by its cache lookup.

30 July 2024: Wouter
	- Fix to document parameters of auth_zone_verify_zonemd_with_key.

25 July 2024: Wouter
	- Add root key 38696 from 2024 for DNSSEC validation. It is added
	  to the default root keys in unbound-anchor. The content can be
	  inspected with `unbound-anchor -l`.

23 July 2024: Yorgos
	- Fix #1106: ratelimit-below-domain logs the wrong FROM address.
	- Cleanup ede.tdir test.
	- For #935 and #1104, clarify RPZ order and semantics.

23 July 2024: Wouter
	- Merge #1110: Make fallthrough explicit for libworker.c.
	- For #1110: Test for fallthrough attribute in configure and add
	  fallthrough attribute annotations.
	- Fix compile when the compiler does not support the noreturn
	  attribute.
	- Fix to have empty definition when not supported for weak attribute.
	- Fix uninitialized variable warning in create_tcp_accept_sock.
	- Fix link of dnstap without openssl.